# escarpolette

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  main.py  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yaml
client/escarpolette-client/: README.md  package-lock.json  package.json
client/escarpolette-client/public/: index.html
client/escarpolette-client/src/: App.vue  main.js
client/escarpolette-client/src/components/: ItemForm.vue  Playlist.vue
client/escarpolette-client/src/plugins/: vuetify.js
escarpolette/: __init__.py  __main__.py  db.py  discovery.py  extensions.py  login.py  player.py  settings.py  tools.py  user.py
escarpolette/api/: __init__.py  items.py
escarpolette/migrations/: v001.sql
escarpolette/models/: item.py  playlist.py
escarpolette/routers/: __init__.py  dependencies.py  items.py  player.py
escarpolette/rules/: limited.py
migrations/versions/: 001_.py  002_add_item_user_id.py  003_remove_item_user_id_default.py
tests/: test_player.py  test_tools.py
tests/schemas/: test_item.py
