[tool.poetry]
name = "escarpolette"
version = "0.7.2"
description = "Manage your musical playlist with your friends without starting a war."
license = "GPL-3.0"
authors = ["Alexandre Morignot <erdnaxeli@cervoi.se>"]
readme = "README.md"
homepage = "https://github.com/erdnaxeli/escarpolette"
repository = "https://github.com/erdnaxeli/escarpolette.git"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.2"
youtube-dl = "*"
fastapi = ">=0.47.1,<0.55.0"
pydantic = "^1.3"
xdg = "^4.0"
pyjwt = "^1.7.1"
click = "^7.0"
uvicorn = "^0.11.2"
importlib_metadata = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
black = {version = "^18.3-alpha.0",allow-prereleases = true}
mypy = "^0.770"
radon = "^4.0"
pytest-mock = "^3.0"
pre-commit = "^2.3"
pdbpp = "^0.10.2"
pytest-asyncio = "^0.12.0"
hypothesis = "^5.10.5"

[tool.poetry.scripts]
escarpolette = "escarpolette:__main__"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
