[tool.poetry]
name = "escarpolette"
version = "0.7.3"
description = "Manage your musical playlist with your friends without starting a war."
license = "GPL-3.0"
authors = ["Alexandre Morignot <erdnaxeli@cervoi.se>"]
readme = "README.md"
homepage = "https://github.com/erdnaxeli/escarpolette"
repository = "https://github.com/erdnaxeli/escarpolette.git"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.2"
youtube-dl = "*"
fastapi = ">=0.47.1,<0.62.0"
pydantic = "^1.3"
xdg = "^4.0"
pyjwt = "^1.7.1"
click = "^7.0"
uvicorn = "^0.11.2"
importlib_metadata = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
black = {version = "^19.10b0",allow-prereleases = true}
mypy = "^0.782"
radon = "^4.3"
pytest-mock = "^3.2"
pre-commit = "^2.6"
pdbpp = "^0.10.2"
pytest-asyncio = "^0.14.0"
hypothesis = "^6.31.5"

[tool.poetry.scripts]
escarpolette = "escarpolette:__main__"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
